# grpc-gateway

./: Makefile
examples/internal/clients/abe/: api_a_bit_of_everything.go  api_a_bit_of_everything_service.go  api_echo_rpc.go  model_a_bit_of_everything.go  model_a_bit_of_everything_1.go  model_a_bit_of_everything_nested.go  model_a_bit_of_everything_service_deep_path_echo_body.go  model_a_bit_of_everything_service_update_v2_body.go  model_examplepb_a_bit_of_everything.go  (+10 more)
examples/internal/helloworld/: helloworld.swagger.json
internal/descriptor/apiconfig/: apiconfig.swagger.json
internal/descriptor/openapiconfig/: openapiconfig.swagger.json
protoc-gen-openapiv2/: go.mod  go.sum  main.go
protoc-gen-openapiv2/grpc-gateway-internal/casing/: BUILD.bazel
protoc-gen-openapiv2/grpc-gateway-internal/codegenerator/: BUILD.bazel  parse_req_test.go
protoc-gen-openapiv2/grpc-gateway-internal/descriptor/: BUILD.bazel  grpc_api_configuration.go  openapi_configuration.go  openapi_configuration_test.go  registry.go  registry_test.go  services.go  services_test.go  types.go
protoc-gen-openapiv2/grpc-gateway-internal/generator/: BUILD.bazel  generator.go
protoc-gen-openapiv2/grpc-gateway-internal/httprule/: BUILD.bazel
protoc-gen-openapiv2/internal/genopenapi/: BUILD.bazel  format_test.go  generator.go  generator_test.go  template.go  template_test.go  types.go
protoc-gen-openapiv2/options/: BUILD.bazel  annotations.proto  openapiv2.proto
runtime/internal/examplepb/: example.swagger.json  non_standard_names.swagger.json  proto2.swagger.json  proto3.swagger.json
(+65 files in other folders)
