load("@io_bazel_rules_go//go:def.bzl", "go_library")

package(default_visibility = ["//visibility:public"])

go_library(
    name = "generator",
    srcs = ["generator.go"],
    importpath = "github.com/Ccheers/grpc-gateway/protoc-gen-openapiv2/grpc-gateway-internal/generator",
    deps = ["//internal/descriptor"],
)

alias(
    name = "go_default_library",
    actual = ":generator",
    visibility = ["//:__subpackages__"],
)
